Mon Jul  4 07:14:12 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread_pthread.c (get_stack): the return address of get_stack
	  must be the highest address of the current thread's stack.

Mon Jul  4 06:37:22 2011  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/intern.h, thread_pthread.c (rb_reserved_fd_p,
	  RB_RESERVED_FD_P): added.  This C API is to limit to access
	  fds which are used by RubyVM internal.  In this version of
	  CRuby, return 1 if fd is communication pipe.
	  If your application needs to close all file descriptors to
	  preent resource leak, skip internal fds using this C API.
	  We also define a macro RB_RESERVED_FD_P(fd).  So you can write
	    #ifndef RB_RESERVED_FD_P
	    #define RB_RESERVED_FD_P(fd) 0
	    #endif
	  for Ruby 1.9.2 or previous version to write compatible extensions.
	  See [ruby-core:37727]

	* thread_win32.c (rb_reserved_fd_p): added (return 0 for any fds).

	* io.c (rb_io_initialize): raise ArgumentError if given fd is reserved by Ruby.

Sun Jul  3 23:43:56 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ext/extmk.rb (extmake): suppresses outputs from extconf.rb.
	  (extmake) warns a failure in extconf.rb.

Sun Jul  3 13:44:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_reject_bang): should not remove elements which are
	  not yielded.  [Bug #2545]

Sun Jul  3 06:10:26 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (get_stack): pthread_attr_getstack() doesn't
	  return stack start addres, but stack base address. Thus,
	  we need to add stack size for getting stack start address.
	  And, we don't have to decrease guard size twice.
	* thread_pthread.c (thread_start_func_1): don't use inaccurate
	  stack start guess if native_thread_init_stack() can be used.
	  [Bug #1813] [ruby-core:24540]

Sun Jul  3 04:50:08 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (get_stack): add to a care of guard page on Mac
	  OS X. [Bug #1813] [ruby-core:24540]